# KB_BS_local-rag-he

./: .env  .gitignore  FIXES_2025-09-30.md  Makefile  QUICK_START.md  README.md  VERIFICATION_GUIDE.md  demo_structured_output.py  diagnose_source_linking.py  extracted_filenames.md  main.py  pyproject.toml  reranked_debug.md  run.sh  summarize_query_research_debug copy.md  summarize_query_research_debug.md  test_empty_response.py  test_refactor.py  test_source_linking.py  test_structured_output.py  test_structured_output_parsing.py  test_thinking_extraction.py
.streamlit/: config.toml
apps/: UNIFIED_WORKFLOW_GERMAN_REFERENCE.md  UNIFIED_WORKFLOW_REFERENCE.md  app_v1_1.py  app_v2.py  app_v2_0.py  app_v2_0g.py  app_v2_1.py  app_v2_1g.py  vdb_emb-retr_handler-app.py
dev/: HITL_example.md  README_report-source-tester.md  ToDo.md  app_v1_1.py  basic_HITL_app.py  basic_report-source-tester_app.py  basic_rerank-reporter_app.py  basic_retr-summ_app.py  filename_extractor_app.py  hitl_graph.py  ideas.py  ollama.md  remove_models.sh  run_filename_extractor.sh  summ_prompts.py  test_st-multigraph.py  test_st-router.py  test_st-router2.py  tool_calling_local_langchain-community.ipynb  tool_calling_local_langchain-community_at.ipynb  tool_calling_local_langchain-community_bindtools.ipynb  update_models.sh
login/: .env.example  FULLY_AUTOMATED_SETUP.md  LAUNCHER_IMPROVEMENTS.md  PERSISTENT_SETUP.md  QUICK_REFERENCE.md  QUICK_START.md  QUICK_TUNNEL.md  README.md  README_HUGGINGFACE.md  README_SETUP_CHOICE.md  SETUP_PERSISTENT_NOW.md  SUMMARY.md  TUNNEL_URL_OPTIONS.md  WORKFLOW.md  (+18 more)
(+18 files in other folders)
